--- a/package.json
+++ b/package.json
@@ -55,10 +55,11 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-katex": "^3.0.1",
-    "react-markdown": "^8.0.7",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
+    "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
